# Bond

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLI_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PROJECT_SUMMARY.md  PUBLISH.md  README.md  SECURITY.md  bond_auth.py  bond_cli.py  docker-compose.yml  example.py  nitter_debug.html  nitter_nitter_cz.html  nitter_nitter_it.html  pyproject.toml  railway.toml  requirements.txt  setup.py  supabase_functions.sql  supabase_schema.sql  test.py  test_any_token.py  test_cli.sh  test_google_trends.py  test_google_trends_stream.py  test_live_stream.py  test_nitter_html.py  test_nitter_integration.py  test_nitter_playwright.py  test_nitter_simple.py  test_nl_parser.py  test_nl_simple.py  test_polymarket_stream.py  (+6 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Walkthrough/: log_each_exchange.py  pipeline_1.py  read_redis_stream.py  test_aggregation.py  test_broker_metrics.py  test_connectors.py  test_sdk_stream.py
apps/: __init__.py  runtime.py
apps/api/: __init__.py  crypto.py  jupiter.py  limits.py  main.py  metrics.py  nlp_parser.py  polymarket.py  spec_builder.py  stream_planner.py
apps/api/static/: index.html  login.html  login_cli.html
apps/broker/: __init__.py  auth.py  broker.py  unified.py
apps/compiler/: __init__.py  compiler.py  dsl.py  schema.json
apps/runtime/: __init__.py  broker_events.py  exchange_registry.py  heartbeat.py  reaper.py  redis_manager.py  runtime_entry.py
apps/runtime/connectors/: binance.py  bybit.py  hyperliquid.py  kucoin.py  lighter.py  mexc.py  okx.py
connectors/: __init__.py  ccxt_polling.py  ccxt_ws.py  custom_ws.py  google_trends_stream.py  jupiter_price.py  nitter_playwright.py  nitter_polling.py  nitter_sync.py  onchain_grpc.py  polymarket_stream.py  x_stream.py
docs/: 3kk0_unified_stream_design.md  connectors-endpoints.md  native_runtime.md
engine/: __init__.py  aggregation.py  dispatch.py  exchange_utils.py  orderbook.py  pipeline_native.py  pipeline_three.py  schemas.py  venues.py
engine/connectors/: __init__.py  base.py  binance.py  binance_orderbook.py  bybit.py  ccxt_pro.py  extended.py  hyperliquid.py  lighter.py  mock.py  nado.py  okx.py
examples/: README.md  check_connectors.py  debug_lob_consumer.py  debug_streams.py  demo.sh  live_hyperliquid_lob.py  live_lighter_lob.py  quickstart_nl.py  simple_client.py  spec_btc_onchain_tweets.json  test_kk0_stream.py  test_lighter_lob.py  test_platform.sh
infra/: Dockerfile.api  Dockerfile.broker  Dockerfile.runtime  docker-compose.yml  entrypoint.sh  start-api.sh
requirements/: core.txt  llm.txt
scripts/: ccxt_method_sampler.py  connector_smoke.py  test_raw_endpoint.py
sdk/python/: README.md  pyproject.toml
sdk/python/bond/: __init__.py  client.py
sdk/python/ekko/: __init__.py  client.py
sdk/python/examples/: binance_quotes.py
sdk/python/kk0/: exceptions.py  models.py  stream.py
tests/: __init__.py  test_aggregation.py  test_compiler.py  test_connectors.py  test_crypto.py  test_integration_lifecycle.py  test_lifecycle.py  test_limits.py  test_spec_validation.py  test_stream_config.py  test_unified_stream.py
