[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bond-broker"
version = "0.2.0"
description = "Lightweight WebSocket broker for Bond event streams"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Bond Contributors", email = "hello@bondstreams.io"}
]
maintainers = [
  {name = "Bond Contributors", email = "hello@bondstreams.io"}
]
keywords = [
  "broker",
  "websocket",
  "redis",
  "fastapi",
  "streaming"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "redis[hiredis]>=5.0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "flake8>=7.0.0",
  "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/OliverTaylor246/Bond"
Documentation = "https://github.com/OliverTaylor246/Bond#readme"
Repository = "https://github.com/OliverTaylor246/Bond.git"
Issues = "https://github.com/OliverTaylor246/Bond/issues"
Changelog = "https://github.com/OliverTaylor246/Bond/blob/main/CHANGELOG.md"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
