[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ekko"
version = "0.2.0"
description = "Echo real-time market data streaming SDK for AI agents and quants"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "Echo Contributors", email = "hello@ekko.dev"}
]
maintainers = [
  {name = "Echo Contributors", email = "hello@ekko.dev"}
]
keywords = [
  "market-data",
  "real-time",
  "streaming",
  "crypto",
  "quant",
  "trading",
  "websocket",
  "on-chain",
  "defi",
  "echo",
  "ekko"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.7.4,<3",
  "ccxt>=4.2.25",
  "websockets>=12.0",
  "hyperliquid-python-sdk>=0.20.1",
  "redis[hiredis]>=5.0.1",
  "httpx>=0.26.0",
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "protobuf>=4.25.1",
  "orjson>=3.9.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.4",
  "pytest-asyncio>=0.23.3",
  "mypy>=1.8.0",
  "flake8>=7.0.0",
  "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/OliverTaylor246/Ekko"
Documentation = "https://github.com/OliverTaylor246/Ekko#readme"
Repository = "https://github.com/OliverTaylor246/Ekko.git"
Issues = "https://github.com/OliverTaylor246/Ekko/issues"
Changelog = "https://github.com/OliverTaylor246/Ekko/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["ekko*", "kk0*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
