[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kk0"
version = "0.1.0"
description = "Python SDK for the 3kk0 unified streaming API"
authors = [{name = "Oliver Taylor"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "websockets>=12.0"
]

[project.urls]
Homepage = "https://github.com/OliverTaylor246/Ekko"

[tool.setuptools]
package-dir = {"" = "sdk/python"}

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["kk0"]
exclude = ["tests*", "ekko*"]
