[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kk0"
version = "0.1.5"
description = "Python SDK for the 3kk0 unified streaming API"
authors = [{name = "Oliver Taylor"}]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "websockets>=12.0"
]

[project.urls]
Homepage = "https://github.com/OliverTaylor246/Ekko"

[tool.setuptools.packages.find]
where = ["."]
include = ["kk0"]
exclude = ["tests*", "ekko*"]
